playground/notas_tests/invalid/pos-02.hulk
function outer() => inner(1);
function inner(x) => x + zzz;
outer();
